--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <img src="/assets/images/Amazon.com-Logo.svg.png" alt="">
   <form class="f1">
     <h2>Sign in</h2>
-    <h4>Email or mobile phone number</h4>
+    <h4>Email or phone number</h4>
     <input type="text" required>
     <button>Continue</button>
     <p class="para">By continuing, you agree to Amazon's
